Bug 328358 - Too many and too fast clicks on a canvas lead to a lock-up and switching to Default Tool
Summary: Too many and too fast clicks on a canvas lead to a lock-up and switching to D...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-03 08:10 UTC by Dmitry Kazakov
Modified: 2017-06-26 15:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2013-12-03 08:10:26 UTC
I guess, it is somehow related to the "Triple Click" feature that is used somewhere in Ko libs.

1) Click fast, click much, click long

Firstly, you will get a message that the layer is locked and painting is impossible (although it is not locked of course). Then the tool will be switched to Default Tool automatically.
Comment 1 Halla Rempt 2013-12-11 13:42:29 UTC
Yes, pretty easy to reproduce.
Comment 2 Dmitry Kazakov 2013-12-12 13:18:04 UTC
Git commit f7e58c09c0167fcf984b369e43ac6c206e8e4b7f by Dmitry Kazakov.
Committed on 12/12/2013 at 13:17.
Pushed by dkazakov into branch 'master'.

Fix too fast mouse clicks (triple clicks) issue

M  +5    -0    krita/ui/tool/kis_tool.cc
M  +1    -0    krita/ui/tool/kis_tool.h

http://commits.kde.org/calligra/f7e58c09c0167fcf984b369e43ac6c206e8e4b7f
Comment 3 Dmitry Kazakov 2013-12-12 13:26:42 UTC
Git commit e2ccd93765584816da70af5747e7ef7b1ce71422 by Dmitry Kazakov.
Committed on 12/12/2013 at 13:17.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix too fast mouse clicks (triple clicks) issue

M  +5    -0    krita/ui/tool/kis_tool.cc
M  +1    -0    krita/ui/tool/kis_tool.h

http://commits.kde.org/calligra/e2ccd93765584816da70af5747e7ef7b1ce71422
Comment 4 Halla Rempt 2017-06-26 13:59:10 UTC
Git commit e0cbb305bd5b48f1ab7e310c05fd7b5caa899755 by Boudewijn Rempt.
Committed on 26/06/2017 at 13:57.
Pushed by rempt into branch 'rempt/touch-painting'.

Remove the triple-click event from KoToolBase

This was added in

commit a7a75f0056abf59cbce27957ab7fb0b6e64e2cb2
Author: C. Boemann <cbo@boemann.dk>
Date:   Thu Jan 12 22:13:26 2012 +0100

to make it possible to select text with triple-click. It broke
Krita, so was worked around in

commit e2ccd93765584816da70af5747e7ef7b1ce71422
Author: Dmitry Kazakov <dimula73@gmail.com>
Date:   Thu Dec 12 17:17:37 2013 +0400

    Fix too fast mouse clicks (triple clicks) issue

And we just don't need it at all anymore now that the text tool
is deprecated.

M  +0    -5    libs/flake/KoToolBase.cpp
M  +0    -8    libs/flake/KoToolBase.h
M  +4    -42   libs/flake/KoToolProxy.cpp
M  +1    -6    libs/flake/KoToolProxy_p.h
M  +0    -5    libs/ui/tool/kis_tool.cc
M  +0    -1    libs/ui/tool/kis_tool.h
M  +0    -22   plugins/flake/textshape/TextTool.cpp
M  +0    -13   plugins/flake/textshape/TextTool.h

https://commits.kde.org/krita/e0cbb305bd5b48f1ab7e310c05fd7b5caa899755
Comment 5 Halla Rempt 2017-06-26 15:24:39 UTC
Git commit 0a2002ff58ee46933352fb9446141cc37f77346c by Boudewijn Rempt.
Committed on 26/06/2017 at 14:56.
Pushed by rempt into branch 'rempt/touch-paint-4'.

Remove the triple-click event from KoToolBase

This was added in

commit a7a75f0056abf59cbce27957ab7fb0b6e64e2cb2
Author: C. Boemann <cbo@boemann.dk>
Date:   Thu Jan 12 22:13:26 2012 +0100

to make it possible to select text with triple-click. It broke
Krita, so was worked around in

commit e2ccd93765584816da70af5747e7ef7b1ce71422
Author: Dmitry Kazakov <dimula73@gmail.com>
Date:   Thu Dec 12 17:17:37 2013 +0400

    Fix too fast mouse clicks (triple clicks) issue

And we just don't need it at all anymore now that the text tool
is deprecated.

M  +0    -5    libs/flake/KoToolBase.cpp
M  +0    -8    libs/flake/KoToolBase.h
M  +5    -41   libs/flake/KoToolProxy.cpp
M  +1    -6    libs/flake/KoToolProxy_p.h
M  +0    -5    libs/ui/tool/kis_tool.cc
M  +0    -1    libs/ui/tool/kis_tool.h
M  +0    -22   plugins/flake/textshape/TextTool.cpp
M  +0    -11   plugins/flake/textshape/TextTool.h

https://commits.kde.org/krita/0a2002ff58ee46933352fb9446141cc37f77346c