Fix too fast mouse clicks (triple clicks) issue

BUG:328358