krita/ui/tool/kis_tool.cc
@@ -483,6 +483,11 @@ void KisTool::mouseDoubleClickEvent(KoPointerEvent *event)
     Q_UNUSED(event);
 }
 
+void KisTool::mouseTripleClickEvent(KoPointerEvent *event)
+{
+    mouseDoubleClickEvent(event);
+}
+
 void KisTool::mousePressEvent(KoPointerEvent *event)
 {
     Q_UNUSED(event);
